--- a/iaff_front/package.json
+++ b/iaff_front/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
+    "react-chat-elements": "^12.0.10",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
@@ -40,7 +41,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.3",
-    "@babel/plugin-proposal-private-property-in-object": "7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "tailwindcss": "^3.3.3"
   }
 }
