--- a/iaff_front/package.json
+++ b/iaff_front/package.json
@@ -8,9 +8,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
-    "mdb-react-ui-kit": "^6.3.0",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.9.0",
     "react-chat-elements": "^12.0.10",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
