--- a/iaff_front/package.json
+++ b/iaff_front/package.json
@@ -8,17 +8,19 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
+    "chokidar": "^3.5.3",
+    "is-binary-path": "^2.1.0",
     "react": "^18.2.0",
     "react-chat-elements": "^12.0.10",
     "react-dom": "^18.2.0",
-    "react-dotenv": "^0.1.3",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "readdirp": "^3.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-dotenv && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
