--- a/iaff_front/package.json
+++ b/iaff_front/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.2",
     "is-binary-path": "^2.1.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
