--- a/iaff_front/.env
+++ b/iaff_front/.env
@@ -1,1 +1,3 @@
 REACT_APP_BACK_END_URL = http://91.195.53.69:5000/
+REACT_APP_BOOKINGCOM_URL = https://booking-com.p.rapidapi.com/v1/hotels/
+REACT_APP_BOOKINGCOM_KEY = KEYHERE
