--- a/iaff_assistant/.env
+++ b/iaff_assistant/.env
@@ -1,4 +1,4 @@
 OPENAI_API_TYPE = "azure"
 OPENAI_API_VERSION = "2023-07-01-preview"
-OPENAI_API_BASE = "https://genairesearchinstance.openai.azure.com/"
-OPENAI_API_KEY = "7a3a56185e5a4dccaa10712b1c1e0590"
+OPENAI_API_BASE = "https://apidiploma.openai.azure.com/"
+OPENAI_API_KEY = "e919ba812f6b4ec09ee2f65b874637ea"
