--- a/iaff_front/.env
+++ b/iaff_front/.env
@@ -1,4 +1,4 @@
 REACT_APP_BACK_END_URL = http://localhost:5001/
 REACT_APP_BOOKINGCOM_URL = https://booking-com.p.rapidapi.com/v1/hotels/
-REACT_APP_BOOKINGCOM_KEY = Booking api key
-REACT_APP_GOOGLE_MAPS_API_KEY = Google Api KEY
+REACT_APP_BOOKINGCOM_KEY = 220e73819cmsh65ef45ea2412241p1f215fjsnab45afd321d5
+REACT_APP_GOOGLE_MAPS_API_KEY = AIzaSyC1ktpwTsLjkF1x3qR94HPcH3JCRFIYQdg
