--- a/.github/workflows/dev_front_hien_iaff.yml
+++ b/.github/workflows/dev_front_hien_iaff.yml
@@ -5,6 +5,14 @@ name: Build and deploy Node.js app to Azure Web App - iaff
 
 on:
   push:
+    paths:
+      - "iaff_front/**"
+    branches:
+      - dev_front_hien
+  pull_request:
+    paths:
+      - "iaff_front/**"
+    types: [opened, synchronize, reopened, closed]
     branches:
       - dev_front_hien
   workflow_dispatch:
@@ -23,18 +31,21 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          cd iaff_front
           npm install
           npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          cd iaff_front
+          zip release.zip ./build/* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: release.zip
+          path: iaff_front/release.zip
 
   deploy:
     runs-on: ubuntu-latest
