--- a/iaff_front/package.json
+++ b/iaff_front/package.json
@@ -2,6 +2,9 @@
   "name": "iaff_front",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20.0.0"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@react-google-maps/api": "^2.19.2",
