--- a/.github/workflows/dev_front_hien_iaff.yml
+++ b/.github/workflows/dev_front_hien_iaff.yml
@@ -5,9 +5,6 @@ name: Build and deploy Node.js app to Azure Web App - iaff
 
 on:
   push:
-    paths:
-      - "iaff_front/**"
-      - ".github/workflows/dev_front_hien_iaff.yml"
     branches:
       - dev_front_hien
   workflow_dispatch:
@@ -26,20 +23,18 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          cd iaff_front
           npm install
           npm run build --if-present
+          npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: |
-          cd iaff_front
-          zip release.zip ./build/* -r
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: iaff_front/release.zip
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -63,5 +58,5 @@ jobs:
         with:
           app-name: 'iaff'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_DF3263E6B67348EE9065E434B95C3D9E }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_2DBDFA0A01CC49328CA6B6A1C8C512C7 }}
           package: .
