--- a/.github/workflows/dev_front_hien_iaff.yml
+++ b/.github/workflows/dev_front_hien_iaff.yml
@@ -5,6 +5,9 @@ name: Build and deploy Node.js app to Azure Web App - iaff
 
 on:
   push:
+    paths:
+      - "iaff_front/**"
+      - ".github/workflows/dev_front_hien_iaff.yml"
     branches:
       - dev_front_hien
   workflow_dispatch:
@@ -19,22 +22,24 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: '20.11.1'
 
       - name: npm install, build, and test
         run: |
+          cd iaff_front
           npm install
           npm run build --if-present
-          npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          cd iaff_front
+          zip release.zip ./build/* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: release.zip
+          path: iaff_front/release.zip
 
   deploy:
     runs-on: ubuntu-latest
