--- a/.github/workflows/dev_front_hien_iaff-back.yml
+++ b/.github/workflows/dev_front_hien_iaff-back.yml
@@ -6,6 +6,9 @@ name: Build and deploy Python app to Azure Web App - iaff-back
 
 on:
   push:
+    paths:
+      - "iaff_back/**"
+      - ".github/workflows/dev_front_hien_iaff-back.yml"
     branches:
       - dev_front_hien
   workflow_dispatch:
@@ -28,19 +31,23 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          cd iaff_back
+          pip install -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          cd iaff_back
+          zip release.zip ./* -r
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v3
         with:
           name: python-app
           path: |
-            release.zip
+            iaff_back/release.zip
             !venv/
 
   deploy:
