--- a/.github/workflows/dev_front_hien_iaff-back.yml
+++ b/.github/workflows/dev_front_hien_iaff-back.yml
@@ -23,23 +23,31 @@ jobs:
       - name: Set up Python version
         uses: actions/setup-python@v1
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Create and start virtual environment
         run: |
           python -m venv venv
           source venv/bin/activate
-      
+
       - name: Install dependencies
         run: |
           cd iaff_back
           pip install -r requirements.txt
-        
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+
+      - name: Set environment variables
+        run: |
+          echo "DB_HOST=${{ secrets.DB_HOST }}" > iaff_back/.env
+          echo "DB_PORT=${{ secrets.DB_PORT }}" >> iaff_back/.env
+          echo "DB_NAME=${{ secrets.DB_NAME }}" >> iaff_back/.env
+          echo "DB_USER=${{ secrets.DB_USER }}" >> iaff_back/.env
+          echo "DB_PW=${{ secrets.DB_PW }}" >> iaff_back/.env
+          echo "ASSISTANT_URL=${{ secrets.ASSISTANT_URL }}" >> iaff_back/.env
 
       - name: Zip artifact for deployment
         run: |
           cd iaff_back
+          shopt -s dotglob
           zip release.zip ./* -r
 
       - name: Upload artifact for deployment jobs
@@ -54,9 +62,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
@@ -66,11 +74,10 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
-      
-      - name: 'Deploy to Azure Web App'
+      - name: "Deploy to Azure Web App"
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'iaff-back'
-          slot-name: 'Production'
+          app-name: "iaff-back"
+          slot-name: "Production"
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_053349549D754EF4AD728B07864514FD }}
