Update files for deployment

--- a/iaff_assistant/Dockerfile
+++ b/iaff_assistant/Dockerfile
@@ -1,10 +1,15 @@
 FROM python:3.11
 
-WORKDIR /app
+WORKDIR /IAFF/app
 
-COPY requirements.txt /app/
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements.txt /IAFF/requirements.txt
 
-COPY . /app
+RUN pip install --no-cache-dir -r /IAFF/requirements.txt
+
+COPY . /IAFF/app
+
+RUN python batch_pipeline.py
+
+EXPOSE 8085
 
 CMD ["python", "service.py"]
