--- a/iaff_assistant/.env
+++ b/iaff_assistant/.env
@@ -1,4 +1,4 @@
 OPENAI_API_TYPE = "azure"
-OPENAI_API_VERSION = "2023-07-01-preview"
-OPENAI_API_BASE = "https://apidiploma.openai.azure.com/"
-OPENAI_API_KEY = "OPEN_API_KEY"
+OPENAI_API_VERSION = "2024-02-15-preview"
+OPENAI_API_BASE = "https://genairesearchinstance.openai.azure.com/"
+OPENAI_API_KEY = "2568bdf01ada498cb5856219a8d60373"
